# igniter_js

./: .check.exs  .credo.exs  .formatter.exs  .gitignore  .iex.exs  .tool-versions  CHANGELOG.md  README.md  mix.exs
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: elixir.yml
config/: config.exs
lib/: igniter_js.ex
lib/igniter_js/: application.ex  helpers.ex  native.ex
lib/igniter_js/parsers/css/: README.md  css_processor.ex  formatter.ex  parser.ex
lib/igniter_js/parsers/javascript/: formatter.ex  parser.ex
native/igniter_js/: .gitignore  Cargo.toml  README.md
native/igniter_js/.cargo/: config.toml
native/igniter_js/src/: atoms.rs  helpers.rs  lib.rs
native/igniter_js/src/parsers/css/: formatter.rs  formatter_ex.rs  mod.rs
native/igniter_js/src/parsers/javascript/: ast.rs  ast_ex.rs  ast_json.rs  formatter.rs  formatter_ex.rs  helpers.rs  mod.rs  phoenix.rs  visitor.rs
plibs/css_tools/: pyproject.toml  setup.py
plibs/css_tools/src/css_tools/: __init__.py  extractor.py  minifier.py  modifier.py  parser.py
plibs/css_tools/src/css_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_helper.exs
test/assets/: invalidAppWithoutLiveSockerObject.js.license  invalidAppWithoutLiveSocket.js.license
test/parsers/css/: formatter_test.exs  parser_test.exs
test/parsers/javascript/: formatter_test.exs  parser_test.exs
