[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "css_tools"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "CSS manipulation tools for Elixir integration"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["tinycss2>=1.4.0"]

[project.urls]
"Homepage" = "https://github.com/yourusername/css_tools"
"Bug Tracker" = "https://github.com/yourusername/css_tools/issues"
