[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "css_tools"
version = "0.1.0"
authors = [{ name = "Shahryar Tavakkoli", email = "shahryar@mishka.tools" }]
description = "CSS manipulation tools for Elixir integration"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["tinycss2>=1.4.0"]

[project.urls]
"Homepage" = "https://github.com/ash-project/igniter_js"
"Bug Tracker" = "https://github.com/ash-project/igniter_js/issues"
